# LIPI-Hindi-Programing-Lang

./: .gitignore  CLAUDE.md  Cargo.toml  IMP Instruction.txt  INSTALL.md  LANGUAGE.md  LICENSE  Last sesssioon .txt  README.md  Run guide.txt  findings.md  install.bat  install.ps1  install.sh  linkedin_post.md  lipi.bat  lipi_linkedin.html  play.bat  progress.md  task_plan.md  test_edit.bat
.cargo/: config.toml
02-research/: ai-coding-in-ancient-scriptures.md  hindu-scriptures-research.md  how-to-implement-all-concepts.md  implementation-spec.md  lipi-features-from-scriptures.md
desktop/: package.json
docs/: APPS_PLAN.md  BOOTSTRAP.md  COMMUNITY.md  CURRICULUM.md  DEPLOY_PLAYGROUND.md  JIT_ROADMAP.md  POSITIONING.md  REGISTRY.md  UPLOAD.md
examples/: bench_fib.swami  bench_list.swami  bench_loop.swami  bharat.swami  bharat_stdlib_test.swami  calculator.swami  demo_full.swami  demo_phonetic.vani  demo_roman.roman  domains_showcase.swami  full_regression.swami  hello.swami  http_test_server.js  interactive_demo.swami  karaka_test.swami  lib_ganit.swami  llm_client.swami  lvm_test.swami  namaste.swami  new_modules_test.swami  overflow_demo.swami  parikshan_demo.swami  phase10_test.swami  phase11_test.swami  phase12_test.swami  phase13_test.swami  phase14_test.swami  phase15_test.swami  phase16_test.swami  phase17_batch1_test.swami  phase17_batch2_test.swami  phase17_batch3_test.swami  phase17_batch4_test.swami  phase17_batch5_test.swami  phase17_batch6_test.swami  phase17_batch7_test.swami  phase17_bignum_test.swami  phase17_comprehension_test.swami  (+54 more)
src/: antaral.rs  (+49 more)
(+28 files in other folders)
